typo in the url

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,21 @@
 <!doctype html>
 <html lang="en">
   <head>
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Instrument+Serif:ital@0;1&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name</title>
+    <title>Perla Ruiz del Solar - Portfolio</title>
+
+    <meta property="og:title" content="Perla Ruiz - Personal Website" />
+    <meta property="og:description" content="Explore Perla Ruiz's portfolio including projects, experience, and AI-integrated work." />
+    <meta property="og:image" content="https://website-4w3z.vercel.app/website-ss.png" />
+    <meta property="og:url" content="https://website-4w3z.vercel.app/" />
+    <meta property="og:type" content="website" />
+
   </head>
   <body>
     <div id="root"></div>
