--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="Perla Ruiz - Personal Website" />
     <meta property="og:description" content="Explore Perla Ruiz's portfolio including projects, experience, and AI-integrated work." />
-    <meta property="og:image" content="https://website-4w3z.vercel.app/website-ss.png" />
+    <meta property="og:image" content="https://website-4w3z.vercel.app/website-img.png" />
     <meta property="og:url" content="https://website-4w3z.vercel.app/" />
     <meta property="og:type" content="website" />
 
